user-api/overlays/prod/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-route53
spec:
    host: api.moc.thoth-station.ninja
    to:
        kind: Service
        name: user-api
    tls:
        caCertificate: ENC[AES256_GCM,data:BG5I/mjBIKxQXGzZ6UTLp5e8OfWuyjIi4hy5skoHfi06+LdN8JzmTopLLrcMFcti0vlP9HNnmWpJ5yTCa1X+/YaZKpPEO/Gdr+6TwYShBI1TNRjOS4Efkz4oWq3fj2zBbGBaA+s29umpt/V3HFEbgatnuvtVCDi0KdPjyQpbA+21GYEyCYW732tW/VX26f6mrV5lrM2Eh4ZAdg3oZRs9xYgZKGXZHc47VatM6G5Dl1Hzbs0k+zOdfNt8SFLKbC4PJv50Tonz6Rav5lXZaGUUWll592Sm62qOcp5oYGOIU9WR/z/ndBLsiZqKrdkL3+GBpW52XUAD8msME0DOGBtpJCFKTg4JvRlvOKSTSG8ifmr88/4qNIDsm7JVmhIpOlsg6W5hAaiH/Ij0ExEnibVRz0MddovxDfwvjdtG7R+puswv/AHh4PvXbnuix6hnvOsGhMpJ37nOc [...]
        certificate: ENC[AES256_GCM,data:evYMZUJSEJfXwjHF0OgchI9BiXziUatpmLuW83Wyarx7g2MZFfgPxSWeYMw73xB/EP0fmeETu0lKPQA0hQGt3V+5yILEA3WWEgci8DOrABGxECkhlfSSi3TIHGGr09SYNKiYRES/UmhSheaRAYXJJ/VWD4q8sJR4Edw08STHo6XoW83o+5BCovdbKeABsloVqSIjM5QqN8lJqS++YESQGYDXo//UwFj9mAmzMGPxcWeBeGB3Ir2Inoy0XmrocWEBmYSN2dusCHqzGGT74oNNIiiTFMMEk8lSK+Xh8r/3wwRXT+18foP++npypQmgroBMBz566/DHQhirnkWdBCPhUezOnZICY4DY5EXpKvLsiBVVpfzavLLMzofEreGXCcjjUnv/DoJvpcYIzCBea+RyQ6qJF2k7LaET+uDJwSCc9b2XYa7iYpfHpdWCPWuSKpvEWZ3zLwg1BOH [...]
        key: ENC[AES256_GCM,data:Lvbu7dkNbbzzSUpxs9oDrE21604guCQKux8vnaRZyHg42S3q0v2zxXhyLWHCmnszFuC8i4iNkP4QI6LV1rs0PWIRG759DkF0eUDS8WFg3isM40TSmZ4wIEIVnyPkQ90UcAmNZu4ohsnu0aIFBg6J9xcs/NsbCCizoZ2rW4Ip25ulpBO7vY+QSUoQpvLHsdIxqyYau6td8qYEeDCHLN85AO4wKp0SPQL5YM4XS/rVP6Lc9UNRq8LuoqLNNmHEOs8o9n9OawgAsZXHx8vJYL0XNSN9eNUxgBR4UXJA3B5XF72wlu3Hu8JPJhSY66sGHO3sZtg0lfWNYVEgsT4FiCBWo7RoXBodku4aGlyg8ZUF+NuTszkXDxZ+h64Mf7ByGTlY7rPFDR5Dkm+EsOtZ+r1sgIY3k7HuOPyZbdgjz+6IPmSdFnlny7qBEjLnOBTIcAsgVawVARkhaoNhBuQpLD5 [...]
        termination: ENC[AES256_GCM,data:TmsGLQ==,iv:pmibEQt8CRLl61QuLt63lWQzNONOK3l9gEcYJC9Nm94=,tag:RHVMJqWbCchnbRpo4ftrfw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-10-26T10:38:06Z'
    mac: ENC[AES256_GCM,data:9b477yHxQBe7qFGPfQmEadkzdqlBITt6RvpKh3rC2cEvHt3VJEELnElDqOduapyoSvTDbogMC2Dabg2QbB0PLytWE9oizE9iCTw0f8OxqOno0gihay1woxtcGQSJXA7mwrl516owRQ0O3+QbKHDZifdL7375CascIkFTGY+qz+E=,iv:bQX4N2H3ovhlqKBXGmFg7zAgrH1zsHttBip0eNj3dNU=,tag:kYuEMFUNM8cYladX1ZCLYQ==,type:str]
    pgp:
    -   created_at: '2020-10-26T10:38:06Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ/5AYcA61OyX4Jy4FzqybBkMNmn7LGMsucn9JQsomQUBAPr
[...]
            =rbVM
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-10-26T10:38:06Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/amLd4YaYm/kq5SjB8QuYZGJ/m9liMscWkhyJpTqFifmF
[...]
            UqtluVK39fLDkzJy/6pWWoCTMwgql1mfkCAT/tN7hg==
            =WDO3
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-10-26T10:38:06Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/RE81F88M8qs8Cj0MMeteiGI/vZ4WXyJa9IfqPXrQ7X2n
[...]
            wmz3HdQOQ5PxlTpzMI6NtNNvuLdfyrSpFqDUkIhReg==
            =D8wt
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
